Created seed app for dhis2 app with angular 6

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,51 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>NgxSeedApp</title>
-  <base href="/">
+  <title></title>
+  <base href="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @font-face {
+      font-family: Scorecard-Averta;
+      font-style: normal;
+      font-weight: 400;
+      src: url(assets/fonts/averta-regular.woff2) format('woff2')
+    }
+
+    @font-face {
+      font-family: Scorecard-Averta;
+      font-style: normal;
+      font-weight: 700;
+      src: url(assets/fonts/averta-bold.woff2) format('woff2')
+    }
+
+    body * {
+      font-family: Scorecard-Averta, sans-serif, appleLogo;
+    }
+
+    .body-wrapper {
+      background-color: #FAFAFA;
+    }
+
+    @media print {
+      .body-wrapper {
+        background-color: #ffffff;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div style="padding-top: 15%; text-align: center;">
+      <img src="assets/icons/balls-5.svg" alt="">
+      <h4 style="margin-top: 50px;">Discovering Seed app Awesomeness</h4>
+    </div>
+  </app-root>
 </body>
+
 </html>
