feat(pwa): Added progressive web app support

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,18 @@
       }
     }
   </style>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
+</head>
+
+<body>
+  <app-root>
+    <div style="padding-top: 15%; text-align: center;">
+      <img src="assets/icons/balls-5.svg" alt="">
+      <h4 style="margin-top: 50px;">Discovering Seed app Awesomeness</h4>
+    </div>
+  </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </head>
 
 <body>
