refactor: Routing restructure

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>RBF APP</title>
     <base href="" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -44,7 +44,7 @@
     <app-root>
       <div style="padding-top: 15%; text-align: center;">
         <img src="assets/icons/balls-5.svg" alt="" />
-        <h4 style="margin-top: 50px;">Discovering Seed app Awesomeness</h4>
+        <h4 style="margin-top: 50px;">Discovering RBF APP</h4>
       </div>
     </app-root>
     <noscript
